Fix warnings (#4919)
* Fix warnings

* Allow Java 11 library

* Remove unecessary parentheses

* Use newer language features

* Fix errorprone warnings

* Fix import order

* Fix Tests